--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ graphviz==0.20.1
 imbalanced-learn==0.12.0
 joblib==1.3.2
 kiwisolver==1.4.5
+lightgbm==4.3.0
 Mako==1.3.2
 MarkupSafe==2.1.5
 matplotlib==3.8.2
